--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-boost": "^0.4.9",
+    "chess.js": "^0.12.0",
     "graphql": "^15.8.0",
-    "chess.js": "^1.0.0-beta.6",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-chessboard": "^2.1.3",
